--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
 
 {% if site.addthis_id %}
   <!-- Go to www.addthis.com/dashboard to customize your tools --> 
-  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-59ee06eb2e1e3f3e"></script> 
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid={{ site.addthis_id }}"></script> 
 {% endif %}
 
 {% if page.content contains '<script type="math/tex' %}
